--- a/src/main.css
+++ b/src/main.css
@@ -127,3 +127,9 @@ html::-webkit-scrollbar-track{
   opacity: 1;
   pointer-events: all;
 }
+
+@media (max-width: 500px) {
+  .logo-pokedex {
+    width: 100vw;
+  }
+}
