--- a/src/main.css
+++ b/src/main.css
@@ -64,6 +64,7 @@ html::-webkit-scrollbar-track{
 
 .logo-pokedex {
   width: 490px;
+  cursor: pointer;
 }
 
 .popup {
@@ -90,11 +91,11 @@ html::-webkit-scrollbar-track{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid rgb(80, 80, 80);
+  border-bottom: 3px solid rgb(102, 102, 102);
 }
 
 .popup-header .title {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 
@@ -108,7 +109,31 @@ html::-webkit-scrollbar-track{
 }
 
 .popup-body {
+  margin: 0px 50px;
   padding: 10px 15px;
+  display: flex;
+}
+.datos-pokemon {
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+  max-width: 80%;
+}
+
+.sprite-popup-pokemon {
+  margin: 10px;
+  border: 3px solid rgb(102, 102, 102);
+  border-radius: 8px;
+  width: 220px;
+  max-width: 70%;
+}
+
+.estatura, .peso {
+  display: block;
+  margin: 10px;
+  height: 100px;
+  border: 3px solid rgb(102, 102, 102);
+  border-radius: 8px;
 }
 
 #overlay {
@@ -131,5 +156,8 @@ html::-webkit-scrollbar-track{
 @media (max-width: 500px) {
   .logo-pokedex {
     width: 90vw;
+  }
+  .sprite-popup-pokemon {
+    width: 15vw;
   }
 }
