--- a/src/main.css
+++ b/src/main.css
@@ -133,9 +133,12 @@ html::-webkit-scrollbar-track{
 }
 
 .estatura, .peso {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
   margin: 10px;
-  height: 100px;
+  height: 80px;
   border: 3px solid rgb(102, 102, 102);
   border-radius: 8px;
 }
@@ -143,6 +146,7 @@ html::-webkit-scrollbar-track{
 .tipos-pokemon {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   border: 3px solid rgb(102, 102, 102);
   border-radius: 8px;
   margin: 10px;
@@ -169,28 +173,7 @@ html::-webkit-scrollbar-track{
 }
 
 
-@media (max-width: 608px) {
-  .popup-body {
-    margin: 0;
-    flex-direction: column;
-    align-items: center;
-  }
-  .datos-pokemon {
-    width: 100%;
-    justify-content: space-around;
-    flex-direction: row;
-  }
-  .estatura, .peso {
-    width: 100%;
-  }
-  .popup {
-    height: 400px;
-  }
-  .tipos-pokemon {
-    height: 140px;
-  }
-  
-}
+
 
 @media (max-width: 861px) {
   .popup-body {
@@ -205,6 +188,7 @@ html::-webkit-scrollbar-track{
   .datos-pokemon {
     width: 100%;
     justify-content: space-around;
+    align-items: center;
     flex-direction: row;
   }
   .estatura, .peso {
@@ -216,4 +200,31 @@ html::-webkit-scrollbar-track{
   .logo-pokedex {
     width: 90vw;
   }
+  .tipos-pokemon {
+    height: 90px;
+  }
+}
+@media (max-width: 608px) {
+  .popup-body {
+    margin: 0;
+    margin-right: 3%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .datos-pokemon {
+    width: 100%;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .estatura, .peso {
+    width: 100%;
+  }
+  .popup {
+    height: auto;
+  }
+  .tipos-pokemon {
+    height: 70px;
+  }
+  
 }
