--- a/src/main.css
+++ b/src/main.css
@@ -29,11 +29,16 @@ html::-webkit-scrollbar-track{
 }
 
 .tarjeta {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: 2px solid rgb(80, 80, 80);
   background-color: #313131;
+  font-size: 1.35rem;
   padding: .25rem;
   border-radius: 8px;
   cursor: pointer;
+  height: 100px;
 }
 
 .tarjeta:hover {
